fix:add a missing property
