# code/backend/douban-service/generated/swagger-ui/swagger.json
@@ -500,6 +500,10 @@
           "type" : "number",
           "format" : "double"
         },
+        "rate_movie" : {
+          "type" : "number",
+          "format" : "double"
+        },
         "title_book" : {
           "type" : "string"
         },
@@ -552,19 +556,19 @@
         "name" : {
           "type" : "string"
         },
-        "book_WISH" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "movie_WISH" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
         "book_READ" : {
           "type" : "integer",
           "format" : "int32"
         },
         "comment" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "following" : {
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "movie_WISH" : {
           "type" : "integer",
           "format" : "int32"
         },
@@ -576,7 +580,7 @@
           "type" : "integer",
           "format" : "int32"
         },
-        "following" : {
+        "book_WISH" : {
           "type" : "integer",
           "format" : "int32"
         }
